--- a/DotnetSandbox/DotnetSandbox.csproj
+++ b/DotnetSandbox/DotnetSandbox.csproj
@@ -46,9 +46,11 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="FinalizeDay.cs" />
     <Compile Include="Lesson_1_5.cs" />
     <Compile Include="Lesson_6.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report.cs" />
   </ItemGroup>
