--- a/DotnetSandbox/DotnetSandbox.csproj
+++ b/DotnetSandbox/DotnetSandbox.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ProgramModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report.cs" />
+    <Compile Include="ServiceHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
